<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Forecast</string>
    <string name="title_section2">Today</string>
    <string name="forecast_title">Forecast</string>
    <string name="conditions_title">Conditions</string>
    <string name="precipitation">Precipitation:</string>
    <string name="humidty">Humidty:</string>
    <string name="uv_index">UV Index:</string>
    <string name="easy_weather">Easy Weather</string>
    <string name="city_sample">For Detroit</string>
    <string name="temp_c_sample">(12.3° C)</string>
    <string name="temp_k_sample">123.4K</string>
    <string name="humidy_sample">12%</string>
    <string name="uv_sample">10</string>
    <string name="precip_layout">12mm</string>
    <string name="precip_sample">12mm</string>
    <string name="feels_label">Feels Like:</string>
    <string name="feels_sample">15.8° C</string>
    <string name="visibility_sample">12km</string>
    <string name="visibility">Visibility:</string>
    <string name="windchill">Windchill:</string>
    <string name="windchill_sample">0° C</string>
    <string name="time_sample">Last Updated on May 25, 1:38 PM ADT</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="day_1_sample">Day 1</string>
    <string name="day_2_sample">Day 2</string>
    <string name="day_3_sample">Day 3</string>
    <string name="forecast_sample">Partly cloudy in the morning, then clear with a chance of rain. High of 12C. Windy. Winds from the SSE at 30 to 35 km/h. Chance of rain 40%.</string>
    <string name="error_string">Oops… Something wen\'t wrong</string>
    <string name="error">Error</string>
    <string name="error_gps">Perhaps you forgot to enable your GPS?</string>
    <string name="about">About</string>
    <string name="copyright">Built by Jeffrey Hann, copyright 2013</string>
    <string name="url">weather.keepiteasy.net</string>
    <string name="refresh">Refresh</string>
    <string name="rate">Rate Easy Weather</string>
    <string name="loading">loading your local weather</string>

</resources>