<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Forecast$ConditionsFragment" >

    <RelativeLayout
        android:id="@+id/section_label_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false" >

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/conditions_title"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/city_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label_layout" >

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/city_sample"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/image_weather_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/weather_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/temp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/imageView1" >

        <TextView
            android:id="@+id/temp_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/temp_k_sample"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temp_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/temp_k"
            android:text="@string/temp_c_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feels_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_weather_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/feels_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/feels_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            
            android:text="@string/feels_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/humidity_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feels_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/humidty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            
            android:layout_alignParentRight="true"
            android:text="@string/humidy_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/uv_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidity_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/uv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/uv_index"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/uv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            
            android:layout_alignParentRight="true"
            android:text="@string/uv_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/visibility_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uv_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/visibility_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/visibility"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/visibility_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/precip_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/visibility_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/precip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/precipitation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/precip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/precip_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/windchill_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/precip_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/windchill_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/windchill"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/windchill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="@string/windchill_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/time_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</RelativeLayout>